[package]
name    = "tapestry-loom"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = [
	"derive",
	"rc",
] }
chrono = { version = "0.4.38", features = [
	"serde",
] }
indextree = { version = "4.7.3", features = [
	"serde",
	"deser",
] }
uuid = { version = "1.11.0", features = [
	"v7",
	"serde",
	"fast-rng",
] }
serde_json = "1.0"
thiserror = "2.0.3"
reqwest = { version = "0.12", features = [
	"json",
] }
tokio = { version = "1", features = [
	"full",
] }
crossterm = "0.28.1"
ratatui = "0.29.0"
